Unnecessary RecipeIngredientDto removed